# gras

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.txt  TODO.txt
benchmark/: .gitignore  benchmark.py  bm_grextras_math.py  bm_registry.py  run_benchmarks.py  run_benchmarks.sh  tb_combiner_array.py  tb_filter_block.py  tb_grextras_delay.py  tb_grextras_math.py  tb_linear_chain.py  tb_many_1_to_1_blocks.py  tb_many_rate_changes.py
cmake/: CMakeLists.txt  GRASTool.cmake  GRASToolExtractor.cmake
cmake/Modules/: CMakeLists.txt  FindClang.cmake  GRASCommon.cmake  GRASPython.cmake  GRASSwig.in.cmake  GRASTest.cmake  GRASTool.cmake  GRASTool.in.cmake  GrPython.cmake
include/gnuradio/: block.hpp  element.hpp  gr_block.h  gr_hier_block2.h  gr_io_signature.h  gr_sptr_magic.h  gr_sync_block.h  gr_sync_decimator.h  gr_sync_interpolator.h  gr_tags.h  gr_top_block.h  gr_types.h  gr_vmcircbuf.h  gras.hpp  hier_block.hpp  io_signature.hpp  runtime_api.h  sbuffer.hpp  sbuffer.ipp  tags.hpp  thread_pool.hpp  top_block.hpp
include/gras/: CMakeLists.txt  block.hpp  block.i  block_config.hpp  buffer_queue.hpp  callable.hpp  chrono.hpp  element.hpp  element.i  exception.i  factory.hpp  gras.hpp  hier_block.hpp  hier_block.i  io_signature.hpp  io_signature.i  sbuffer.hpp  sbuffer.i  sbuffer.ipp  tag_iter.hpp  tag_iter.i  tags.hpp  tags.i  thread_pool.hpp  time_tag.hpp  time_tag.i  top_block.hpp  top_block.i  weak_container.hpp  work_buffer.hpp  work_buffer.ipp
include/gras/detail/: block.hpp  callable.hpp  chrono.hpp  element.hpp  factory.hpp  property.hpp  sbuffer.hpp  work_buffer.hpp
lib/: CMakeLists.txt  alloc_on_node.hpp  block.cpp  block_actor.cpp  block_allocator.cpp  block_config.cpp  block_consume.cpp  block_handlers.cpp  block_message.cpp  block_ports.cpp  block_produce.cpp  block_props.cpp  block_task.cpp  buffer_ios.hpp  buffer_queue_circ.cpp  buffer_queue_pool.cpp  callable.cpp  circular_buffer.cpp  colors.hpp  common_impl.hpp  debug.cpp  debug_impl.hpp  element.cpp  element_impl.hpp  element_uid.cpp  factory.cpp  gr_block.cpp  gr_hier_block2.cpp  gr_sync_block.cpp  gr_top_block.cpp  gras.pc.in  hier_block.cpp  input_handlers.cpp  jit_factory.cpp  json_parser.cpp  json_parser_read_104900.hpp  module_loader.cpp  output_handlers.cpp  pmc_to_ptree.cpp  pmx_helper.hpp  (+20 more)
lib/gras_impl/: bitset.hpp  block_actor.hpp  block_data.hpp  buffer_queue.hpp  cool_queue.hpp  debug.hpp  endless_buffer_queue.hpp  input_buffer_queues.hpp  interruptible_thread.hpp  messages.hpp  misc.hpp  output_buffer_queues.hpp  query_common.hpp  simple_buffer_queue.hpp  stats.hpp  token.hpp  vector_of_queues.hpp  vector_utils.hpp
python/gras/: CMakeLists.txt  GRASElements.i  GRAS_Block.i  GRAS_Element.i  GRAS_Factory.i  GRAS_HierBlock.i  GRAS_IOSignature.i  GRAS_Loader.py  GRAS_PyBlock.i  GRAS_PyHierBlocks.i  GRAS_SBuffer.i  GRAS_Tags.i  GRAS_TestUtils.py  GRAS_ThreadPool.i  GRAS_TimeTag.i  GRAS_TopBlock.i  GRAS_Utils.i  GRAS_Utils.py  __init__.py
python/gras/query/: CMakeLists.txt  __init__.py  chart_allocator_counts.js  chart_factory.js  chart_global_counters.js  chart_handler_breakdown.js  chart_overall_throughput.js  chart_overhead_compare.js  chart_port_counters.js  chart_port_downtime.js  chart_total_io_counts.js  main.css  main.html  main.js  utils.js
python/gras/stats/: CMakeLists.txt  __init__.py  chart_factory.js  chart_handler_breakdown.js  chart_overall_throughput.js  chart_overhead_compare.js  chart_total_io_counts.js  charts.js  main.css  main.html  main.js  registry.js  utils.js
query/: CMakeLists.txt  __init__.py  chart_factory.js  chart_global_counters.js  chart_overhead_compare.js  chart_topology_display.js  main.html  main.js  utils.js
swig/: gras.i  runtime.i  sw_runtime.i
tests/: CMakeLists.txt  block_calls_test.cpp  block_calls_test.py  block_props_test.cpp  block_props_test.py  block_test.py  callable_test.cpp  chrono_time_test.cpp  demo_blocks.py  example_module.cpp  example_module.py  factory_test.cpp  hier_block_test.py  import_test.py  io_sig_test.py  jit_factory_test.py  live_connect_test.cpp  module_loader_test.py  qa_runtime.cc  query_test.py  sbuffer_test.py  serialize_tags_test.cpp  stats_test.py  thread_pool_test.py  time_tags_test.py
tmpl/: callable.tmpl.hpp  callable_detail.tmpl.hpp  expand_template.py  factory.tmpl.hpp  factory_detail.tmpl.hpp  regen_all.sh
tool/: CMakeLists.txt  gras_tool.cpp  gras_tool.hpp  tool_dirs.cpp  tool_handle.cpp  tool_misc.cpp  tool_process.cpp
